# cleanup-tidal-playlists

./: .gitignore  .markdownlint.json  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  REFACTORING_COMPLETE.md  SECURITY.md  alembic.ini  cleanup_tidal_playlists.py  create_rekordbox_xml.py  main.py  main_new.py  pyproject.toml  requirements.txt  setup.cfg  setup.py  test_status.py  tidal-cleanup.code-workspace  tidal_cleanup.db  tidal_session.json  tox.ini
.github/workflows/: ci-cd.yml
.mcp/: config.json
alembic/: README.md  env.py
alembic/versions/: 5042779864de_add_playlist_source_field.py  79d1ccf69993_add_rekordbox_folders_table.py  879cb3821a06_add_tidal_unavailable_flag_to_track_.py  987ed04d1693_add_unified_sync_fields_for_tidal_.py  remove_symlinks_add_file_paths_list.py
config/: .env-Tidal  .env-dev  .env.example  rekordbox_genre_hierarchy.json  rekordbox_mytag_mapping.json
docs/: CONFIGURATION.md  DATABASE_ARCHITECTURE.md  DATABASE_IMPLEMENTATION_SUMMARY.md  DATABASE_QUICKSTART.md  DATABASE_TODO_CONTINUATION.md  DIRECTORY_DIFF_OPTIMIZATION.md  DOWNLOAD_FEATURE.md  DOWNLOAD_IMPLEMENTATION.md  EVENT_PLAYLIST_HANDLING.md  GENRE_HIERARCHY.md  IMPLEMENTATION_ROADMAP.md  INIT_DIFF_IMPLEMENTATION.md  INTELLIGENT_PLAYLIST_UPDATE.md  MIGRATION.md  MODEL_CHANGES_FOR_SYNC.md  PHASE1_COMPLETE.md  PHASE2_TIDAL_FETCHER_COMPLETE.md  PIPELINE_PRECOMMIT_SYNC.md  PROJECT_MANAGEMENT.md  QUICKSTART_REKORDBOX_SYNC.md  REFACTORING_SUMMARY.md  REFACTORING_TWO_STEP_SYNC.md  REKORDBOX_SYNC.md  REORGANIZATION_PROPOSAL.md  SERVICES_ANALYSIS.md  STEP1_VALIDATION_RESULTS.md  TEST_RESULTS_TWO_STEP_SYNC.md  TIDAL_DL_NG_CONFIG.md  TIDAL_STATE_FETCHER_REFACTORING.md  TWO_STEP_SYNC.md  UNIFIED_SYNC_ARCHITECTURE.md
docs/diagrams/: README.md  db-sync-comprehensive.puml  db-sync-flow.puml  db-sync-phase1-fetch.puml  db-sync-phase2-scan.puml  db-sync-phase3-dedup.puml  db-sync-phase4-decisions.puml  db-sync-phase5-execution.puml  decision-engine-flow.puml  diff-command-flow.puml  download-execution-flow.puml  filesystem-scanner-flow.puml  tidal-fetch-flow.puml
docs/logging/: LOGGING_IMPLEMENTATION_SUMMARY.md  LOGGING_IMPROVEMENTS.md
scripts/: backup_rekordbox_db.py  check_event_tags_and_playlists.py  check_logical_operators.py  check_specific_playlist.py  check_version.py  debug_emoji_bytes.py  debug_emoji_mapping.py  debug_empty_check.py  debug_event_sync.py  debug_extract_emojis.py  debug_mytag_check.py  debug_party.py  debug_property_value.py  debug_smartlist_parse.py  delete_all_playlists.py  delete_discogs_playlists.py  delete_genres_folder.py  fetch_tracks_by_mytag.py  find_empty_intelligent.py  fix_imports_after_reorg.py  fix_mypy_third_party_errors.py  fix_rekordbox_indents.py  fix_remaining_test_imports.py  fix_test_imports.py  inspect_rekordbox_playlists.py  list_all_playlists.py  manual_playlist_check.py  parse_one_playlist.py  pyrekordbox_advanced_spike.py  pyrekordbox_spike.py  remove_empty_playlists.py  remove_rekordbox_duplicates.py  tag_mp3_playlist.py  test_emoji_parsing.py  test_energy_intelligent_playlists.py  test_energy_tags.py  test_event_playlists.py  test_on_demand_playlists.py  test_playlist_creation.py  test_update_behavior.py  (+4 more)
scripts/helpers/: debug_duplicates_in_playlist.py  get_all_tidalapi_user_functions.py  set_file_path_to_db.py
scripts/logging/: analyze_logging.py  convert_logging.py
scripts/migrations/: __init__.py  add_unified_sync_fields.py
scripts/not in use/: check_mytag_issues.py  check_smart_playlist_tags.py  check_smartlist_conditions.py  check_status_tags.py  compare_playlists.py  debug_smartlist.py  diagnose_genre_hierarchy.py  diagnose_missing_tags.py  example_genre_hierarchy.py  example_rekordbox_sync.py  find_playlist.py  inspect_playlist_tags.py  verify_mytag_id.py  (+5 more)
spikes/: spike_rekordbox_playlist_test.py
tests/: test_basic.py  test_conflict_resolver.py  test_database.py  test_deduplication_logic.py  test_directory_diff_service.py  test_download_orchestrator.py  test_file_scanner_service.py  test_file_service.py  test_filesystem_scanner.py  test_mytag_manager.py  test_playlist_name_parser.py  test_progress_tracker.py  test_rekordbox_playlist_sync.py  test_rekordbox_service.py  test_rekordbox_snapshot_service.py  test_rekordbox_sync.py  test_snapshot_service_clean_name.py  test_snapshot_service_folder_segments.py  test_sync_decision_engine.py  test_sync_orchestrator.py  test_sync_state.py  test_tidal_download_service.py  test_tidal_snapshot.py  test_tidal_state_fetcher.py  test_unified_sync.py
(+74 files in other folders)
